--- a/splitshow/build.gradle
+++ b/splitshow/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.pinger.sample"
-        minSdkVersion 21
-        targetSdkVersion 24
+        applicationId "com.pinger.splitshow"
+        minSdkVersion 19
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -27,7 +27,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.github.open-android:RetrofitUtils:0.1.9'
     testCompile 'junit:junit:4.12'
     compile project(':library')
     compile project(path: ':library')
